<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Patty Burger</string>
    <string name="hello_world">Hello world!</string>
    <string name="quit">Quit Application!</string>
    <string name="really_quit">Are you sure you have satiated :/ ?!</string>
    <string name="yes">yes dude :D !</string>
    <string name="no">Not yet :3 !</string>

    //actions
    <string name="action_settings">Settings</string>
    <string name="action_cart">Cart</string>
    <string name="action_search">Search</string>
    <string name="action_my_location">My Location</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    //toolbar titles
    <string name="title_restaurants">Restaurants</string>
    <string name="title_restaurant_details">Restaurant Details</string>
    <string name="title_restaurant_menu">Restaurant Menu</string>
    <string name="title_meal_description">Meal Description</string>
    <string name="title_cart_list">Cart List</string>
    <string name="title_restaurant_location">Restaurant Location</string>
    <string name="title_registration">Register</string>
    <string name="title_order_details">Order Details</string>
    <string name="title_submit_order">Submit Order</string>
    <string name="title_write_review">Write Review</string>
    <string name="title_read_reviews">Read Reviews</string>

    //layout strings
    <string name="meal_image_desc">Meal image</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="meal_name">Meal name</string>
    <string name="meal_description">Meal description</string>
    <string name="meal_price">Price</string>
    <string name="title_activity_cart_list">CartList</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <!-- <string name="btn_login">LOGIN</string> -->

    //login strings
    <string name="btn_register">REGISTER</string>
     <!--<string name="btn_link_to_register">Not a member? Sign up now.</string>-->
     <string name="btn_message">You will receive a confirmation code in a minute!</string>
    <string name="welcome">Welcome</string>
    <string name="name">fullName</string>
    <string name="phone">phoneNumber</string>

    //nav_bar strings
    <string name="nav_item_home">Home</string>
    <string name="nav_item_cart">Cart</string>
    <string name="nav_item_myOrders">My Orders</string>
    <string name="nav_item_favorite">Favorite</string>

    <!-- navigation drawer item labels -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_cart</item>
        <item>@string/nav_item_myOrders</item>
        <item>@string/nav_item_favorite</item>
    </string-array>

    <string-array name="areas_array">
        <item>Abu-Romana</item>
        <item>Malki</item>
        <item>Mazza</item>
        <item>Miesat</item>
        <item>Muhajreen</item>
        <item>Rkn Al-Den</item>
        <item>Shalan</item>
        <item>Salhia</item>
    </string-array>

    <string-array name="place_type_array">
        <item>House</item>
        <item>Building</item>
        <item>Office</item>
    </string-array>

    <string name="title_activity_landing">Patty Burger</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
