<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_cart" android:title="@string/action_cart"
        android:orderInCategory="100" app:showAsAction="always"
        android:icon="@drawable/ic_cart_2"/>
    <item android:id="@+id/action_search" android:title="@string/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search_2"/>
    <item android:id="@+id/action_search" android:title="@string/action_my_location"
        android:orderInCategory="100" app:showAsAction="always"
        android:icon="@drawable/ic_map_3"/>
</menu>
