<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bluebrains.pattyburger.MealDescription"
    android:clickable="true"
    android:id="@+id/mealLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/meal_name"
        android:id="@+id/mealName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:id="@+id/mealImage"
        android:focusableInTouchMode="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_marginTop="76dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:nestedScrollingEnabled="false" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/mealImage"
        android:layout_marginTop="20dp"
        android:id="@+id/details_layout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:id="@+id/cartButton"
            android:layout_marginBottom="42dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="46dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/mealPrice"
            android:text="@string/meal_price"
            android:textSize="@dimen/abc_text_size_large_material"
            android:layout_alignBottom="@+id/cartButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/meal_description"
            android:id="@+id/mealDescription"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/mealPrice"
            android:layout_alignStart="@+id/mealPrice"
            android:layout_marginTop="50dp"
            android:nestedScrollingEnabled="false" />
    </RelativeLayout>

</RelativeLayout>
